<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView5"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name" />

    <Button
        style="@style/Widget.AppCompat.Button.Colored"
        android:textSize="15dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:padding="15dp"
        android:id="@+id/buttonAdicionar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adicionarBT" />

    <Button
        android:id="@+id/buttonVoltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        style="@style/Widget.AppCompat.Button.Colored"
        android:textSize="15dp"
        android:padding="15dp"
        android:text="@string/salvar" />
</LinearLayout>